# relativeGuidance

./: .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  MonteCarlo_eval.py  README.md  RLEnvCheck.py  RLEnvSimulate.py  RLEnvTraining.py  RLEnv_Check.py  RLEnv_Evaluate.py  RLEnv_MC_Eval.py  RLEnv_Simulate.py  RLEnv_Training.py  RLEnvironment.py  TEST.py  TEST_OBGuidance.py  TEST_guidance.py  Training.py  ZERO.py  __init__.py  __main__.py  autorun_MC_simulations.sh  basicTest.py  checkEnvironment.py  compareAgents.py  corso.py  dockerfile  folder_structure.txt  imports.py  main.py  matlabPLOT.m  policy_graph  profiling_results.txt  profiling_results_short.txt  pyproject.toml  requirements.txt  savedEnvironmentTEST.pkl  seeNN.py  seeNormalization.py  (+8 more)
RLEnvironment/: RLenv.py  __init__.py  trainAgent.py
SimEnvRL/: __init__.py  pyproject.toml
SimEnvRL/UserDataDisplay/: __init__.py  plots.py  printSummary.py  see.py
SimEnvRL/config/: RL_config.py  __init__.py  env_config.py
SimEnvRL/envs/: RLEnvironment.py  RLEnvironmentOLD.py  __init__.py
SimEnvRL/generalScripts/: OBControl.py  OBGuidance.py  OBNavigation.py  ReferenceFrames.py  __init__.py  check.py  dynamicsModel.py  sunPositionVersor.py  wrappers.py
UserDataDisplay/: __init__.py  plots.py  plotty.py  printSummary.py
config/: RL_config.py  __init__.py  agent_config.py  env_config.py
generalScripts/: CR3BP.py  CR3BP_MoonFrame.py  OBControl.py  OBGuidance.py  OBNavigation.py  ReferenceFrames.py  TESTTTTTTT.py  __init__.py  check.py  dynamicsModel.py  fullDynamisEquations.py  sunPositionVersor.py
(+80 files in other folders)
