[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/SimEnvRL"]

[project]
name = "SimEnvRL"
version = "3.0.0"
dependencies = [
  "gymnasium",
  "scipy",      # Scientific computing
  "numpy",      # Numerical computations
  "colorama",   # for the rendering of the environment (use colors)
]