[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/SimEnvRL"]

[project]
name = "SimEnvRL"
version = "4.5.0"
dependencies = [
  "gymnasium",          # Gym environment
  "scipy",              # Scientific computing
  "numpy",              # Numerical computations
  "stable-baselines3",  # Reinforcement learning
  "torch",              # Deep learning
]